...
    

    override func viewDidLoad() {
        super.viewDidLoad()
        // Do any additional setup after loading the view.
        self.tableView?.accessibilityIdentifier = "mainView"
        self.navigationController?.navigationBar.accessibilityIdentifier = "mainNavigationBar"
        
        setupViews()
        fetchToDoItems()
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        navigationItem.title = "TODO Items"
        navigationController?.navigationBar.prefersLargeTitles = true
        let addButton = UIBarButtonItem(barButtonSystemItem: UIBarButtonItem.SystemItem.add, target: self, action: #selector(self.addToDoItem))
        addButton.accessibilityIdentifier = "addButton"
        navigationItem.rightBarButtonItems = [addButton]
    }

    private func setupViews() {
        tableView = UITableView(frame: .zero, style: .plain)
...
